# TS_ENGINE

./: .gitattributes  .gitignore  CMakeLists.txt  GenerateVS19Project.bat  GenerateVS22Project.bat  Install vcpkg.bat  Install-vcpkg.bat  LICENSE  README.md  RemoveInstalledPackages.bat
Dependencies/include/ImGuizmo/example/: imgui.ini
Dependencies/include/ImGuizmo/example/x64/Debug/: ImGuizmoSample.exe.recipe  ImGuizmoSample.vcxproj.FileListAbsolute.txt  vc142.idb  vc143.idb
Dependencies/include/ImGuizmo/example/x64/Debug/ImGuizmoSample.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ImGuizmoSample.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Dependencies/include/assimp/: Build_vs2019_x64.bat  Build_vs2022_x64.bat
Dependencies/x64-windows/debug/lib/: glfw3.lib
Dependencies/x64-windows/release/lib/: glfw3_mt.lib
ExternalDependencies/include/glad/: glad.h
ExternalDependencies/src/glad/: glad.c
src/: GameObject.cpp  GameObject.h  ModelLoader.cpp  TS_ENGINE.h
src/Components/: Animation.cpp  Animation.h  Terrain.cpp  Terrain.h
src/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Factory.cpp  Factory.h  GameObject.cpp  GameObject.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  ModelLoader.cpp  ModelLoader.h  MouseCodes.h  Object.cpp  Object.h  TSAssert.h  Transform.cpp  Transform.h  Window.cpp  Window.h  tspch.cpp  tspch.h
src/EntityManager/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
src/Primitive/: Bone.cpp  Bone.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Line.cpp  Line.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Quad.cpp  Quad.h  Skybox.cpp  Skybox.h  Sphere.cpp  Sphere.h
src/Renderer/: Batcher.cpp  Batcher.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  SceneCamera.cpp  SceneCamera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureAtlasCreator.cpp  TextureAtlasCreator.h  TextureAtlasHelper.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
src/Renderer/Camera/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  SceneCamera.cpp  SceneCamera.h
src/Renderer/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h
src/SceneManager/: Node.cpp  Node.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
src/Utils/: MyMath.cpp  MyMath.h  Utility.h
